# dsp-api

./: .adr-dir  .bazelignore  .bazelrc  .codacy.yml  .codecov.yml  .dockerignore  .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .gitmodules  .grenrc  .grenrc.js  .kodus-readiness.yml  .markdownlint.yml  .mcp.json  .scala-steward.conf  .scalafix.conf  .scalafmt.conf  .travis.yml  .worktreeinclude  404.html  AGENTS.md  BUILD  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTEXT-MAP.md  CONVENTIONS.md  Contributors.md  Dockerfile.ci  KnoraBuild.sbt  MODULARIZATION-PLAN.md  MODULE.bazel  Makefile  README.md  REFACTORING_ANALYSIS.md  RELEASING.md  REVIEW.md  (+34 more)
bazel/toolchains/: BUILD.bazel
docker/knora-api/: BUILD  BUILD.bazel
docker/knora-jena-fuseki/: BUILD  BUILD.bazel
docker/knora-salsah1/: BUILD  BUILD.bazel
docker/knora-sipi/: BUILD  BUILD.bazel  sipi_image_test_config.yaml
modules/bagit/: BUILD.bazel
modules/fuseki/: BUILD.bazel  Dockerfile  README.md
modules/ingest/: BUILD.bazel  CLAUDE.md  README.md
modules/jwt/: BUILD.bazel
modules/shacl-validator/: BUILD.bazel
modules/sipi/: .gitignore  BUILD.bazel
modules/test-e2e/: BUILD.bazel
modules/test-ingest-integration/: BUILD.bazel
modules/test-it/: BUILD.bazel
modules/test-runner/: BUILD.bazel
modules/testkit/: BUILD.bazel
modules/webapi/: BUILD.bazel
proto/: BUILD.bazel  address.proto  person.proto  resource.proto  value.proto  zip_code.proto
salsah1/: .dockerignore  BUILD  BUILD.bazel  Dockerfile  SalsahBuild.sbt
salsah1/public/: ckeditor.css  default.css  default.less  index.html
salsah1/src/: BUILD
scala/: BUILD.bazel
sipi/: .gitignore  BUILD.bazel  Makefile  README.md  docker-compose.yml
sipi/config/: BUILD.bazel  sipi.config.lua  sipi.debug-config.lua  sipi.development-config.lua  sipi.docker-config.lua  sipi.docker-no-auth-config.lua  sipi.docker-test-config.lua  sipi.fake-knora-test-config.lua  sipi.init-debug.lua  sipi.init-knora-no-auth.lua  sipi.init-knora-test.lua  sipi.init-knora.lua  sipi.init-no-knora-test.lua  sipi.init.lua  sipi.knora-config.lua  sipi.knora-docker-config.lua  sipi.knora-docker-it-config.lua  sipi.knora-docker-no-auth-config.lua  sipi.knora-docker-test-config.lua  sipi.knora-local-config.lua  sipi.knora-test-config.lua  sipi.knora-test-docker-config.lua  sipi.local-config.lua  sipi.no-knora-test-config.lua  sipi.test-config.lua  sipi_iiif.ini
sipi/scripts/: BUILD.bazel  Knora_login.lua  Knora_logout.lua  admin_upload.lua  authentication.lua  basexx.lua  cache.lua  clean_temp_dir.lua  clean_temp_dir.sh  clean_tempdir.lua  convert_from_binaries.lua  convert_from_file.lua  convert_from_path.lua  debug.lua  delete_temp_file.lua  entrypoint.sh  env.lua  exit.lua  export-moving-image-frames.sh  file_info.lua  file_specific_folder_util.lua  get_knora_session.lua  get_mediatype.lua  healthcheck.sh  jwt.lua  log_util.lua  make_thumbnail.lua  migrate_files_into_new_structure.lua  send_response.lua  sh.lua  sipi.init-knora-no-auth.lua  sipi.init-knora-test.lua  sipi.init-knora.lua  sipi.init-no-auth.lua  sipi.init-test.lua  sipi.init.lua  store.lua  strings.lua  test1.lua  test2.lua  (+10 more)
sipi/server/: test.html
test_data/: BUILD.bazel  project_shortcodes.md
test_data/all_data/: admin-data-minimal.ttl  admin-data.ttl  anything-data.ttl  beol-data.ttl  biblio-data.ttl  books-data.ttl  freetest-data.ttl  permissions-data-minimal.ttl  permissions-data.ttl  sequences-data.ttl  system-data.ttl  webern-data.ttl
test_data/constructResponseUtilV2/: Zeitglocklein.ttl  mainQuery1.ttl  mainQuery2.ttl  thingWithOneHiddenThing.ttl  thingWithStandoff.ttl  visibleThingWithHiddenIntValues.ttl
test_data/demo_data/: image-collection-demo-data-description.md  images-demo-data.ttl  incunabula-demo-data-description.md
test_data/e2e.v2.SearchRouteV2R2RSpec/: gravsearchtest1-admin.ttl  gravsearchtest1-data.ttl  gravsearchtest1-onto.ttl
test_data/listsR2RV2/: imagesList.jsonld  imagesList.rdf  imagesList.ttl  imagesListNode.jsonld  imagesListNode.rdf  imagesListNode.ttl  othertreelist.jsonld  treelist.jsonld  treelistnode.jsonld
test_data/metadataE2EV2/: metadata-flat.jsonld  metadata.ttl
test_data/ontologies/: anything-onto.ttl  beol-onto.ttl  biblio-onto.ttl  books-onto.ttl  dokubib-onto.ttl  empty-thing-onto.ttl  example-box.ttl  example-ibox.ttl  freetest-onto.ttl  images-onto.ttl  incunabula-onto.ttl  leibniz-onto.ttl  minimal-onto.ttl  newton-onto.ttl  sequences-onto.ttl  something-onto.ttl  webern-onto.ttl
test_data/ontologyR2RV2/: allOntologyMetadata.jsonld  allOntologyMetadata.rdf  allOntologyMetadata.ttl  anythingHasDate.jsonld  anythingHasDate.rdf  anythingHasDate.ttl  anythingHasListItem.jsonld  anythingHasListItem.rdf  anythingHasListItem.ttl  anythingOntologyMetadata.jsonld  anythingOntologyMetadata.rdf  anythingOntologyMetadata.ttl  anythingOntologyWithValueObjects.jsonld  anythingOntologyWithValueObjects.rdf  anythingOntologyWithValueObjects.ttl  anythingThingWithAllLanguages.jsonld  anythingThingWithAllLanguages.rdf  anythingThingWithAllLanguages.ttl  beolOntologyMetadata.jsonld  beolOntologyMetadata.rdf  beolOntologyMetadata.ttl  boxOntologyWithValueObjects.jsonld  boxOntologyWithValueObjects.rdf  boxOntologyWithValueObjects.ttl  imagesBild.jsonld  imagesBild.rdf  imagesBild.ttl  imagesTitel.jsonld  imagesTitel.rdf  imagesTitel.ttl  incunabulaBook.jsonld  incunabulaBook.rdf  incunabulaBook.ttl  incunabulaOntologyMetadata.jsonld  incunabulaOntologyMetadata.rdf  incunabulaOntologyMetadata.ttl  incunabulaOntologySimple.jsonld  incunabulaOntologySimple.rdf  incunabulaOntologySimple.ttl  incunabulaOntologyWithValueObjects.jsonld  (+41 more)
test_data/other.v1.DrawingsGodsV1E2ESpec/: rvp-admin-data.ttl  rvp-permissions-data.ttl
test_data/other.v1.DrawingsGodsV1Spec/: drawings-gods_admin-data.ttl  drawings-gods_data.ttl  drawings-gods_ontology.ttl  drawings-gods_permissions-data.ttl  (+1 more)
toolchains/: BUILD  BUILD.bazel
webapi/: .gitignore  BUILD  BUILD.bazel  Dockerfile  Dockerfile.ci  Dockerfile.testing  README.md  WebapiBuild.sbt
(+8029 files in other folders)
