package(default_visibility = ["//visibility:public"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@rules_scala_annex//rules:scala.bzl", "scala_binary", "scala_library")

filegroup(
    name = "main_scala",
    srcs = glob([
        "src/main/scala/org/knora/salsah/**/*.scala",
    ]),
)

filegroup(
    name = "public_folder",
    srcs = glob([
        "public/**",
    ]),
)

pkg_tar(
    name = "public_folder_tar",
    srcs = [
        ":public_folder",
    ],
    package_dir = "public",
    strip_prefix = "./public",  # means don't flatten directory structure!
)

scala_binary(
    name = "salsah1",
    data = [
        ":public_folder",
    ],
    main_class = "org.knora.salsah.Main",
)

scala_library(
    name = "main_library",
    srcs = [
        ":main_scala",
    ],
    resources = [
        "//salsah1/src/main/resources",
    ],
    # unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
    deps = [
        "@maven//:com_typesafe_akka_akka_actor_2_12",
        "@maven//:com_typesafe_akka_akka_http_2_12",
        "@maven//:com_typesafe_akka_akka_http_core_2_12",
        "@maven//:com_typesafe_akka_akka_stream_2_12",
        "@maven//:com_typesafe_config",
    ],
)

scala_library(
    name = "test_library",
    testonly = True,
    srcs = [
        "//salsah1/src/test/scala/org/knora/salsah:test_srcs",
    ],
    resources = [
        "//sipi/config",
    ],
    # unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
    deps = [
        "//salsah1:main_library",
        "@io_bazel_rules_webtesting//java/com/google/testing/web",
        "@maven//:com_typesafe_akka_akka_actor_2_12",
        "@maven//:com_typesafe_akka_akka_http_2_12",
        "@maven//:com_typesafe_akka_akka_http_core_2_12",
        "@maven//:com_typesafe_akka_akka_stream_2_12",
        "@maven//:com_typesafe_config",
        "@maven//:org_scalatest_scalatest_2_12",
        "@maven//:org_scalactic_scalactic_2_12",
        # Selenium
        "@maven//:org_seleniumhq_selenium_selenium_support",
        "@org_seleniumhq_selenium_selenium_api",  # pulled in by io_bazel_rules_webtesting
        "@maven//:org_testcontainers_testcontainers",
    ],
)
