load("@rules_java//java:defs.bzl", "java_library")

# RDF fixtures that webapi specs load by the `test_data/...` path. Packaged as
# resources so they sit on the test classpath at exactly that path: the in-memory
# triplestore loader and FileUtil.readTextResource both look them up via
# getResourceAsStream("test_data/..."). Under sbt these files are read from the
# working directory instead (test_data is not on sbt's classpath), so both build
# tools resolve the same fixtures. Scoped to the referenced files, not the whole
# multi-hundred-MB test_data tree. Add entries here when a Bazel-run spec needs a
# new fixture.
java_library(
    name = "fixtures",
    resource_strip_prefix = "",
    resources = glob(["project_ontologies/*.ttl"]) + [
        # DefaultRdfData project_data + the data files individual specs load.
        "project_data/admin-data.ttl",
        "project_data/anything-data.ttl",
        "project_data/books-data.ttl",
        "project_data/permissions-data.ttl",
        "project_data/system-data.ttl",
        # generated fixtures used by JsonLDUtilSpec
        "generated_test_data/ontologyR2RV2/anythingOntologyWithValueObjects.jsonld",
        "generated_test_data/ontologyR2RV2/anythingOntologyWithValueObjects.ttl",
        "generated_test_data/resourcesR2RV2/BookReiseInsHeiligeLand.jsonld",
        "generated_test_data/resourcesR2RV2/BookReiseInsHeiligeLand.ttl",
    ],
    visibility = ["//visibility:public"],
)
