load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load("@io_bazel_rules_scala//scala_proto:scala_proto_toolchain.bzl", "scala_proto_toolchain")

# scalac options like in KnoraBuild.sbt (warn-unused is added, as it seems good)
scala_toolchain(
    name = "dsp_api_toolchain_impl",
    scalacopts = ["-Ywarn-unused", "-feature", "-unchecked", "-deprecation", "-Yresolve-term-conflict:package"],
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"]
)

toolchain(
    name = "dsp_api_scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    toolchain = "dsp_api_toolchain_impl",
    visibility = ["//visibility:public"]
)

scala_proto_toolchain(
    name = "scala_proto_toolchain",
    with_grpc = False,
    with_flat_package = False,
    with_single_line_to_string = False,
    visibility = ["//visibility:public"],
)

toolchain(
    name = "dsp_api_proto_toolchain",
    toolchain = ":scala_proto_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala_proto:toolchain_type",
    visibility = ["//visibility:public"],
)